feat: Add event detail page with dynamic content, ticket handling, and immersive UI

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,13 @@
 			"command": "npm run dev",
 			"isBackground": true,
 			"group": "test"
+		},
+		{
+			"label": "Run Dev Server",
+			"type": "shell",
+			"command": "npm run dev",
+			"isBackground": true,
+			"group": "test"
 		}
 	]
 }
