--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
     "@types/mapbox-gl": "^3.4.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
@@ -22,13 +22,14 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.10.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
-    "prisma": "^7.2.0",
+    "prisma": "^5.10.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5"
