--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^3.4.1",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
+    "mysql2": "^3.16.1",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -24,6 +27,8 @@
   "devDependencies": {
     "@prisma/client": "^5.10.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
