--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/formidable": "^3.4.6",
     "@types/mapbox-gl": "^3.4.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
