--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-map-gl": "^8.1.0",
+    "react-to-print": "^3.2.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
