--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^17.2.3",
     "formidable": "^3.5.4",
     "framer-motion": "^12.26.2",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
     "next": "16.1.2",
