--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/formidable": "^3.4.6",
     "@types/mapbox-gl": "^3.4.1",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -18,6 +19,7 @@
     "framer-motion": "^12.26.2",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
