--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.0",
+    "mysql2": "^3.16.2",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
